Add enhanced landing page above Swagger UI
Creates a professional, informative landing page with:

Hero Section:
- Team name and mission
- Team Topologies badge

Quick Stats Dashboard:
- Platform uptime (99.9%)
- Deploys per day (50+)
- Mean time to deploy (< 15min)
- Developer satisfaction NPS (42)

Mission & Contact:
- Clear mission statement
- Quick contact buttons (Slack, incidents, office hours, docs)

What We Provide:
- 6 capability cards: CI/CD, K8s, IaC, observability, security, dev environments
- Clear, scannable format

How to Work With Us:
- Color-coded boxes for urgent/feature/questions
- Clear response time expectations

Design:
- Clean, modern CSS with gradient hero
- Responsive grid layouts
- Professional color scheme
- Mobile-friendly
- Maintains Swagger UI below for full API docs

Makes the page immediately useful for teams wanting to understand and engage with platform team.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,307 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Swagger UI</title>
+    <title>Platform Team - Team API</title>
     <link rel="stylesheet" type="text/css" href="dist/swagger-ui.css" />
     <link rel="stylesheet" type="text/css" href="dist/index.css" />
     <link rel="icon" type="image/png" href="dist/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="dist/favicon-16x16.png" sizes="16x16" />
+    <style>
+      :root {
+        --primary: #2c5282;
+        --secondary: #4299e1;
+        --success: #48bb78;
+        --warning: #ed8936;
+        --bg: #f7fafc;
+        --text: #2d3748;
+        --border: #e2e8f0;
+      }
+
+      * {
+        box-sizing: border-box;
+      }
+
+      body {
+        margin: 0;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+        background: var(--bg);
+        color: var(--text);
+      }
+
+      .hero {
+        background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
+        color: white;
+        padding: 3rem 2rem;
+        text-align: center;
+      }
+
+      .hero h1 {
+        margin: 0 0 0.5rem 0;
+        font-size: 2.5rem;
+        font-weight: 700;
+      }
+
+      .hero p {
+        margin: 0;
+        font-size: 1.2rem;
+        opacity: 0.95;
+      }
+
+      .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 2rem;
+      }
+
+      .section {
+        background: white;
+        border-radius: 8px;
+        padding: 2rem;
+        margin-bottom: 2rem;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+      }
+
+      .section h2 {
+        margin: 0 0 1rem 0;
+        color: var(--primary);
+        font-size: 1.5rem;
+        border-bottom: 2px solid var(--border);
+        padding-bottom: 0.5rem;
+      }
+
+      .stats {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 1.5rem;
+        margin-bottom: 2rem;
+      }
+
+      .stat-card {
+        background: white;
+        border-radius: 8px;
+        padding: 1.5rem;
+        text-align: center;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+        border-left: 4px solid var(--secondary);
+      }
+
+      .stat-value {
+        font-size: 2rem;
+        font-weight: 700;
+        color: var(--primary);
+        display: block;
+      }
+
+      .stat-label {
+        font-size: 0.875rem;
+        color: #718096;
+        margin-top: 0.25rem;
+      }
+
+      .contact-buttons {
+        display: flex;
+        gap: 1rem;
+        flex-wrap: wrap;
+        margin-top: 1.5rem;
+      }
+
+      .btn {
+        display: inline-flex;
+        align-items: center;
+        gap: 0.5rem;
+        padding: 0.75rem 1.5rem;
+        border-radius: 6px;
+        text-decoration: none;
+        font-weight: 600;
+        transition: all 0.2s;
+      }
+
+      .btn-primary {
+        background: var(--secondary);
+        color: white;
+      }
+
+      .btn-primary:hover {
+        background: var(--primary);
+        transform: translateY(-2px);
+        box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+      }
+
+      .btn-secondary {
+        background: white;
+        color: var(--primary);
+        border: 2px solid var(--primary);
+      }
+
+      .btn-secondary:hover {
+        background: var(--bg);
+      }
+
+      .grid-2 {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 1.5rem;
+      }
+
+      .info-box {
+        padding: 1rem;
+        background: var(--bg);
+        border-radius: 6px;
+        border-left: 3px solid var(--secondary);
+      }
+
+      .info-box h3 {
+        margin: 0 0 0.5rem 0;
+        font-size: 1rem;
+        color: var(--primary);
+      }
+
+      .info-box p {
+        margin: 0;
+        font-size: 0.875rem;
+        color: #4a5568;
+      }
+
+      .badge {
+        display: inline-block;
+        padding: 0.25rem 0.75rem;
+        border-radius: 12px;
+        font-size: 0.75rem;
+        font-weight: 600;
+        background: var(--success);
+        color: white;
+      }
+
+      #swagger-ui {
+        margin-top: 2rem;
+      }
+
+      @media (max-width: 768px) {
+        .hero h1 {
+          font-size: 1.75rem;
+        }
+        .hero p {
+          font-size: 1rem;
+        }
+        .stats {
+          grid-template-columns: 1fr;
+        }
+      }
+    </style>
   </head>
 
   <body>
+    <!-- Hero Section -->
+    <div class="hero">
+      <h1>🚀 Platform Team API</h1>
+      <p>Self-service platform capabilities for rapid, safe feature delivery</p>
+      <span class="badge">Platform Team (Team Topologies)</span>
+    </div>
+
+    <div class="container">
+      <!-- Quick Stats -->
+      <div class="stats">
+        <div class="stat-card">
+          <span class="stat-value">99.9%</span>
+          <span class="stat-label">Platform Uptime</span>
+        </div>
+        <div class="stat-card">
+          <span class="stat-value">50+</span>
+          <span class="stat-label">Deploys/Day</span>
+        </div>
+        <div class="stat-card">
+          <span class="stat-value">&lt; 15min</span>
+          <span class="stat-label">Mean Time to Deploy</span>
+        </div>
+        <div class="stat-card">
+          <span class="stat-value">NPS 42</span>
+          <span class="stat-label">Developer Satisfaction</span>
+        </div>
+      </div>
+
+      <!-- Mission & Contact -->
+      <div class="section">
+        <h2>🎯 Our Mission</h2>
+        <p style="font-size: 1.1rem; line-height: 1.6; margin-bottom: 1.5rem;">
+          Enable product teams to ship features safely and rapidly through self-service platform capabilities. 
+          We handle infrastructure complexity so you can focus on building great products.
+        </p>
+
+        <h3 style="margin-top: 2rem; margin-bottom: 1rem; color: var(--primary);">Get in Touch</h3>
+        <div class="contact-buttons">
+          <a href="#" class="btn btn-primary">
+            💬 Slack: #platform-team
+          </a>
+          <a href="#" class="btn btn-secondary">
+            🚨 Incidents: #platform-incidents
+          </a>
+          <a href="#" class="btn btn-secondary">
+            📅 Office Hours: Tuesdays 2-3pm GMT
+          </a>
+          <a href="#" class="btn btn-secondary">
+            📚 Documentation
+          </a>
+        </div>
+      </div>
+
+      <!-- What We Provide -->
+      <div class="section">
+        <h2>🛠 What We Provide</h2>
+        <div class="grid-2">
+          <div class="info-box">
+            <h3>CI/CD Pipelines</h3>
+            <p>Self-service GitHub Actions & GitLab CI workflows. Deploy to production in minutes.</p>
+          </div>
+          <div class="info-box">
+            <h3>Container Orchestration</h3>
+            <p>Kubernetes & ECS clusters with auto-scaling and zero-downtime deployments.</p>
+          </div>
+          <div class="info-box">
+            <h3>Infrastructure as Code</h3>
+            <p>Terraform modules and CloudFormation templates for consistent environments.</p>
+          </div>
+          <div class="info-box">
+            <h3>Observability</h3>
+            <p>Prometheus, Grafana, and CloudWatch dashboards with smart alerting.</p>
+          </div>
+          <div class="info-box">
+            <h3>Security & Compliance</h3>
+            <p>Automated scanning, policy enforcement, and audit logging built-in.</p>
+          </div>
+          <div class="info-box">
+            <h3>Developer Environments</h3>
+            <p>Consistent local dev setups matching production. Spin up in < 5 minutes.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- How to Work With Us -->
+      <div class="section">
+        <h2>🤝 How to Work With Us</h2>
+        <div style="margin-top: 1rem;">
+          <div style="padding: 1rem; background: #fff5f5; border-left: 3px solid #fc8181; border-radius: 4px; margin-bottom: 1rem;">
+            <strong>🚨 Urgent Incidents:</strong> Ping <code>#platform-incidents</code> immediately. Response &lt; 1 hour during business hours.
+          </div>
+          <div style="padding: 1rem; background: #fefcbf; border-left: 3px solid #f6e05e; border-radius: 4px; margin-bottom: 1rem;">
+            <strong>🎯 New Feature Requests:</strong> Create a GitHub issue with our template. We'll respond within 2 business days.
+          </div>
+          <div style="padding: 1rem; background: #c6f6d5; border-left: 3px solid #48bb78; border-radius: 4px;">
+            <strong>💬 General Questions:</strong> Ask in <code>#platform-team</code> or join office hours (Tuesdays 2-3pm GMT).
+          </div>
+        </div>
+      </div>
+
+      <!-- API Documentation -->
+      <div class="section">
+        <h2>📖 API Documentation</h2>
+        <p style="margin-bottom: 1rem;">
+          Explore our Team API below to understand our capabilities, interfaces, dependencies, and metrics.
+          This living document defines our "contract" with the organization.
+        </p>
+      </div>
+    </div>
+
+    <!-- Swagger UI -->
     <div id="swagger-ui"></div>
     <script src="dist/swagger-ui-bundle.js" charset="UTF-8"> </script>
     <script src="dist/swagger-ui-standalone-preset.js" charset="UTF-8"> </script>
